--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -39,32 +39,61 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "NIpdPfd1Hm28"
-      },
       "source": [
-        "## Understanding the Transformer Architecture"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yGDK_at2HtYa"
-      },
-      "source": [
-        "<figure>\n",
-        "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Simple_Transformers/images/overall-architecture-of-transformers.png\" width=\"400\" height=\"400\" alt=\"Transformers Architecture\">\n",
-        "    <figcaption>Transformers Architecture</figcaption>\n",
-        "</figure>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Let's first dive into the self-attention mechanism, which forms the core component of transformers."
+        "## Time Complexity Comparison"
       ],
       "metadata": {
-        "id": "Rthr11dvdZpl"
+        "id": "sKdKEQX3E6EY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<figure>\n",
+        "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Simple_Transformers/images/time-complexity-of-transformers.png\" width=\"1000\" height=\"300\" alt=\"Time complexity\">\n",
+        "    <figcaption>Time complexity</figcaption>\n",
+        "</figure>"
+      ],
+      "metadata": {
+        "id": "3zLRb49eETsW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The table from Vaswani et al. (2017), which is from the seminal paper \"Attention is All You Need,\" compares different neural network layer types across three dimensions: complexity per layer, number of sequential operations, and maximum path length:\n",
+        "\n",
+        "- **Self-Attention Layer**:\n",
+        "  - Computational complexity per layer is \\( O(n^2 \\cdot d) \\), meaning it scales quadratically with the sequence length and linearly with the dimensionality of the representation.\n",
+        "  - Sequential operations are constant (\\( O(1) \\)), allowing for high parallelization during training and inference.\n",
+        "  - Maximum path length is also constant (\\( O(1) \\)), ensuring that long-range dependencies can be learned effectively as any position in the sequence can directly attend to any other position.\n",
+        "\n",
+        "- **Recurrent Layer**:\n",
+        "  - Complexity is \\( O(n \\cdot d^2) \\), which scales linearly with the sequence length, making it less efficient for longer sequences compared to self-attention.\n",
+        "  - Requires \\( O(n) \\) sequential operations, limiting parallelization and potentially increasing training time.\n",
+        "  - Has a linear maximum path length (\\( O(n) \\)), which can make learning long-range dependencies more challenging.\n",
+        "\n",
+        "- **Convolutional Layer**:\n",
+        "  - Shows a complexity of \\( O(k \\cdot n \\cdot d^2) \\), where \\( k \\) is the kernel size, suggesting an increase in computation if larger receptive fields are needed.\n",
+        "  - Has constant sequential operations (\\( O(1) \\)), similar to self-attention, facilitating parallelization.\n",
+        "  - Exhibits a logarithmic maximum path length (\\( O(\\log_k(n)) \\)), improving the learning of dependencies over recurrent layers but potentially less effective than self-attention for very long sequences.\n",
+        "\n",
+        "- **Restricted Self-Attention Layer (or Local Attention)**:\n",
+        "  - Complexity per layer is reduced to \\( O(r \\cdot n \\cdot d) \\) by restricting attention to a window of \\( r \\) surrounding tokens, balancing computational efficiency and the ability to capture dependencies.\n",
+        "  - Maintains constant sequential operations (\\( O(1) \\)), benefiting parallelization.\n",
+        "  - Features a maximum path length of \\( O(n/r) \\), indicating a compromise in the ability to learn dependencies as the sequence length increases compared to full self-attention."
+      ],
+      "metadata": {
+        "id": "bTfRpR-CEUWf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's dive into the self-attention mechanism, which forms the core component of transformers."
+      ],
+      "metadata": {
+        "id": "s8xn6oKFFVj5"
       }
     },
     {
@@ -404,6 +433,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<figure>\n",
+        "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Simple_Transformers/images/attention.png\" width=\"180\" height=\"300\" alt=\"Attention Mechanism\">\n",
+        "    <figcaption>Attention Mechanism</figcaption>\n",
+        "</figure>"
+      ],
+      "metadata": {
+        "id": "tVJwk5k_FibE"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 29,
       "metadata": {
@@ -440,6 +481,18 @@
       "source": [
         "Allows the model to jointly attend to information from different representation subspaces."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<figure>\n",
+        "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Simple_Transformers/images/mutl-head-attention.png\" width=\"180\" height=\"300\" alt=\"Multi Head Attention\">\n",
+        "    <figcaption>Multi Head Attention</figcaption>\n",
+        "</figure>"
+      ],
+      "metadata": {
+        "id": "ZE4m9LylFjIW"
+      }
     },
     {
       "cell_type": "code",
@@ -912,10 +965,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "yGDK_at2HtYa"
+      },
+      "source": [
+        "<figure>\n",
+        "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Simple_Transformers/images/overall-architecture-of-transformers.png\" width=\"400\" height=\"400\" alt=\"Transformers Architecture\">\n",
+        "    <figcaption>Transformers Architecture</figcaption>\n",
+        "</figure>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "vSmgcW5mDKOz"
       },
       "source": [
-        "First, let's put together the main Transformer architecture combining the encoder, decoder, and other components previously described."
+        "Now, let's put together the main Transformer architecture combining the encoder, decoder, and other components previously described."
       ]
     },
     {
