--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -407,6 +407,29 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### Helper Functions"
+      ],
+      "metadata": {
+        "id": "rd5J2JpDH5HB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Helper function to produce N identical layers\n",
+        "def clones(module, N):\n",
+        "  \"Produce N identical layers.\"\n",
+        "  return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])"
+      ],
+      "metadata": {
+        "id": "YKKM9QA6H2ue"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "IMUoEXHACCq3"
       },
@@ -446,22 +469,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 37,
       "metadata": {
         "id": "U38lQRe2CXRh"
       },
       "outputs": [],
       "source": [
-        "def attention(query, key, value, mask=None, dropout=None):\n",
-        "    \"Compute 'Scaled Dot Product Attention'\"\n",
-        "    d_k = query.size(-1)\n",
-        "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
-        "    if mask is not None:\n",
-        "        scores = scores.masked_fill(mask == 0, -1e9)\n",
-        "    p_attn = scores.softmax(dim=-1)\n",
-        "    if dropout is not None:\n",
-        "        p_attn = dropout(p_attn)\n",
-        "    return torch.matmul(p_attn, value), p_attn"
+        "class ScaledDotProductAttention(nn.Module):\n",
+        "    def __init__(self, dropout=None):\n",
+        "        super(ScaledDotProductAttention, self).__init__()\n",
+        "        self.dropout = nn.Dropout(dropout) if dropout is not None else None\n",
+        "\n",
+        "    def forward(self, query, key, value, mask=None):\n",
+        "        d_k = query.size(-1)\n",
+        "        scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
+        "        if mask is not None:\n",
+        "            scores = scores.masked_fill(mask == 0, -1e9)\n",
+        "        p_attn = F.softmax(scores, dim=-1)\n",
+        "        if self.dropout is not None:\n",
+        "            p_attn = self.dropout(p_attn)\n",
+        "        return torch.matmul(p_attn, value), p_attn"
       ]
     },
     {
@@ -496,7 +523,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 41,
       "metadata": {
         "id": "4RL7T6pwCfnb"
       },
@@ -509,15 +536,18 @@
         "        self.d_k = d_model // h\n",
         "        self.h = h\n",
         "        self.linears = clones(nn.Linear(d_model, d_model), 4)\n",
-        "        self.attn = None\n",
+        "        self.attn = ScaledDotProductAttention(dropout)\n",
         "        self.dropout = nn.Dropout(p=dropout)\n",
         "\n",
         "    def forward(self, query, key, value, mask=None):\n",
         "        if mask is not None:\n",
         "            mask = mask.unsqueeze(1)\n",
         "        nbatches = query.size(0)\n",
-        "        query, key, value = [l(x).view(nbatches, -1, self.h, self.d_k).transpose(1, 2) for l, x in zip(self.linears, (query, key, value))]\n",
-        "        x, self.attn = attention(query, key, value, mask=mask, dropout=self.dropout)\n",
+        "        query, key, value = [\n",
+        "            l(x).view(nbatches, -1, self.h, self.d_k).transpose(1, 2)\n",
+        "            for l, x in zip(self.linears, (query, key, value))\n",
+        "        ]\n",
+        "        x, attn_weights = self.attn(query, key, value, mask=mask)\n",
         "        x = x.transpose(1, 2).contiguous().view(nbatches, -1, self.h * self.d_k)\n",
         "        return self.linears[-1](x)"
       ]
@@ -785,19 +815,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def clones(module, N):\n",
-        "    \"Produce N identical layers.\"\n",
-        "    return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])"
-      ],
-      "metadata": {
-        "id": "ksb63f7TiLi3"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "class Encoder(nn.Module):\n",
         "    \"Core encoder is a stack of N layers\"\n",
         "\n",
@@ -985,7 +1002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 42,
       "metadata": {
         "id": "R0ijbTIEDOAl"
       },
@@ -1065,24 +1082,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6702Kmgk-au",
-        "outputId": "5915f85d-a260-4d35-abcb-e2c026f4f9fa"
+        "outputId": "0441ecd4-c655-4d53-ab5d-d9f28f16b172"
       },
-      "execution_count": 35,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Example Untrained Model Prediction: tensor([[0, 6, 1, 6, 1, 6, 1, 6, 1, 6]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 3, 1, 2, 5, 5, 5, 5, 5, 5]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 6, 6, 6, 6, 6, 6, 6, 6, 6]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 1, 7, 6, 1, 7, 6, 1, 7, 6]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 3, 8, 6, 2, 5, 0, 3, 8, 6]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  9,  3, 10,  4,  3, 10,  4,  3, 10]])\n",
             "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0, 10,  1,  6, 10,  1,  6, 10,  1,  6]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0, 10,  6,  9,  9,  9,  9,  9,  9,  9]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  1,  2, 10,  9,  8,  1,  2, 10,  9]])\n"
+            "Example Untrained Model Prediction: tensor([[ 0,  6,  6,  6,  2, 10,  6,  2, 10,  6]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 4, 2, 2, 2, 2, 2, 2, 2, 2]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 8, 9, 8, 9, 8, 8, 8, 8, 8]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0, 10,  5,  2,  2,  0, 10,  3,  9,  1]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 8, 7, 7, 7, 7, 7, 7, 7, 7]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 8, 1, 8, 7, 3, 5, 8, 7, 3]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 4, 7, 3, 3, 3, 3, 3, 3, 3]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 5, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0,  4,  9, 10,  0,  9, 10,  0,  9, 10]])\n"
           ]
         }
       ]
