--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -147,6 +147,28 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Alternative Attention Approaches"
+      ],
+      "metadata": {
+        "id": "9D1aD6_XVi2C"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- **Additive Attention**: While the scaled dot-product attention is widely used, alternative attention mechanisms exist, such as additive (or Bahdanau) attention, which uses a feed-forward network to compute attention scores instead of dot products. Each variant has its own advantages and use cases.\n",
+        "\n",
+        "- **Multi-Head Attention**: The Transformer model extends the basic scaled dot-product attention mechanism through the use of multi-head attention, where the model runs several attention processes in parallel. This approach allows the model to simultaneously attend to information from different representation subspaces at different positions, improving the model's ability to capture various types of relationships in the data.\n",
+        "\n",
+        "- **Self-Attention vs. Cross-Attention**: The module as described implements self-attention, where queries, keys, and values all come from the same source. In cross-attention settings, keys and values can come from a different source than queries, enabling interactions between different sequences (e.g., between an encoder and a decoder in a sequence-to-sequence model)."
+      ],
+      "metadata": {
+        "id": "uOdKUvIgVorf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Mathemetical Foundation of Attention"
       ],
       "metadata": {
@@ -469,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 45,
       "metadata": {
         "id": "U38lQRe2CXRh"
       },
@@ -478,18 +500,47 @@
         "class ScaledDotProductAttention(nn.Module):\n",
         "    def __init__(self, dropout=None):\n",
         "        super(ScaledDotProductAttention, self).__init__()\n",
+        "        # Initialize dropout for attention scores, if provided.\n",
         "        self.dropout = nn.Dropout(dropout) if dropout is not None else None\n",
         "\n",
         "    def forward(self, query, key, value, mask=None):\n",
+        "        # Dimension of the key vectors, used for scaling down the dot products.\n",
         "        d_k = query.size(-1)\n",
-        "        scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
+        "        # Compute the dot products between queries and keys for each batch and head,\n",
+        "        scores = torch.matmul(query, key.transpose(-2, -1))\n",
+        "        # Scale the results\n",
+        "        scaled_score = scores / math.sqrt(d_k)\n",
+        "        # Apply masking if provided (for attention to consider only certain positions).\n",
         "        if mask is not None:\n",
-        "            scores = scores.masked_fill(mask == 0, -1e9)\n",
-        "        p_attn = F.softmax(scores, dim=-1)\n",
+        "            scaled_score = scaled_score.masked_fill(mask == 0, -1e9)\n",
+        "        # Apply softmax to obtain attention probabilities.\n",
+        "        p_attn = F.softmax(scaled_score, dim=-1)\n",
+        "        # Optionally apply dropout to attention scores.\n",
         "        if self.dropout is not None:\n",
         "            p_attn = self.dropout(p_attn)\n",
+        "        # Weight the values by the computed attention probabilities.\n",
         "        return torch.matmul(p_attn, value), p_attn"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The `ScaledDotProductAttention` module implements the attention mechanism that is at the heart of the Transformer model's effectiveness. Its roles and effects on the structure are as follows:\n",
+        "\n",
+        "- **Attention Calculation**: This module computes the attention scores by taking the dot product of the query with the key. It scales the dot product by the square root of the dimensionality of the key to prevent extremely small gradients when the dimensionality is large. This scaling helps stabilize gradients during training.\n",
+        "\n",
+        "- **Masking**: The optional mask allows the model to selectively ignore certain positions within the input sequence. This is particularly useful for masking out padding tokens in the input sequence or for preventing the model from peeking at future tokens when processing sequences in an autoregressive manner (e.g., during training a language model).\n",
+        "\n",
+        "- **Dropout**: Applying dropout to the attention scores is a regularization technique that helps prevent overfitting by randomly zeroing out some of the scores before computing the final attention weights.\n",
+        "\n",
+        "- **Softmax**: The softmax function converts the attention scores into probabilities, ensuring that they are non-negative and sum up to 1. This step allows the model to essentially \"focus\" on the most relevant parts of the input.\n",
+        "\n",
+        "- **Output**: The module outputs the weighted sum of the value vectors, scaled by the attention probabilities, which is then used in subsequent layers of the model. It also returns the attention probabilities themselves, which can be useful for analysis or for visualizing the model's attention.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FK4gLRowVdWH"
+      }
     },
     {
       "cell_type": "markdown",
@@ -523,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 47,
       "metadata": {
         "id": "4RL7T6pwCfnb"
       },
@@ -1002,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 48,
       "metadata": {
         "id": "R0ijbTIEDOAl"
       },
@@ -1082,24 +1133,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6702Kmgk-au",
-        "outputId": "0441ecd4-c655-4d53-ab5d-d9f28f16b172"
+        "outputId": "e13fdc7f-b82c-429f-ce95-a5c2e3af0f52"
       },
-      "execution_count": 43,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Example Untrained Model Prediction: tensor([[ 0,  1,  3,  5,  0,  1,  3,  5,  0, 10]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 4, 2, 2, 4, 2, 2, 2, 2, 4]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 7, 2, 8, 8, 8, 8, 8, 8, 8]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 9, 2, 0, 7, 2, 0, 7, 2, 6]])\n",
             "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  6,  6,  6,  2, 10,  6,  2, 10,  6]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 4, 2, 2, 2, 2, 2, 2, 2, 2]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 8, 9, 8, 9, 8, 8, 8, 8, 8]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0, 10,  5,  2,  2,  0, 10,  3,  9,  1]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 8, 7, 7, 7, 7, 7, 7, 7, 7]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 8, 1, 8, 7, 3, 5, 8, 7, 3]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 4, 7, 3, 3, 3, 3, 3, 3, 3]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 5, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  4,  9, 10,  0,  9, 10,  0,  9, 10]])\n"
+            "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 7, 6, 6, 7, 6, 6, 6, 6, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 8, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0, 10,  1,  1,  1,  9,  8,  5,  8,  5]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 8, 3, 9, 9, 9, 9, 9, 9, 9]])\n"
           ]
         }
       ]
