--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -64,24 +64,24 @@
         "The table from Vaswani et al. (2017), which is from the seminal paper \"Attention is All You Need,\" compares different neural network layer types across three dimensions: complexity per layer, number of sequential operations, and maximum path length:\n",
         "\n",
         "- **Self-Attention Layer**:\n",
-        "  - Computational complexity per layer is \\( O(n^2 \\cdot d) \\), meaning it scales quadratically with the sequence length and linearly with the dimensionality of the representation.\n",
-        "  - Sequential operations are constant (\\( O(1) \\)), allowing for high parallelization during training and inference.\n",
-        "  - Maximum path length is also constant (\\( O(1) \\)), ensuring that long-range dependencies can be learned effectively as any position in the sequence can directly attend to any other position.\n",
+        "  - Computational complexity per layer is $ O(n^2 \\cdot d) $, meaning it scales quadratically with the sequence length and linearly with the dimensionality of the representation.\n",
+        "  - Sequential operations are constant $ O(1) $, allowing for high parallelization during training and inference.\n",
+        "  - Maximum path length is also constant $ O(1) $, ensuring that long-range dependencies can be learned effectively as any position in the sequence can directly attend to any other position.\n",
         "\n",
         "- **Recurrent Layer**:\n",
-        "  - Complexity is \\( O(n \\cdot d^2) \\), which scales linearly with the sequence length, making it less efficient for longer sequences compared to self-attention.\n",
-        "  - Requires \\( O(n) \\) sequential operations, limiting parallelization and potentially increasing training time.\n",
-        "  - Has a linear maximum path length (\\( O(n) \\)), which can make learning long-range dependencies more challenging.\n",
+        "  - Complexity is $ O(n \\cdot d^2) $, which scales linearly with the sequence length, making it less efficient for longer sequences compared to self-attention.\n",
+        "  - Requires $ O(n) $ sequential operations, limiting parallelization and potentially increasing training time.\n",
+        "  - Has a linear maximum path length $ O(n) $, which can make learning long-range dependencies more challenging.\n",
         "\n",
         "- **Convolutional Layer**:\n",
-        "  - Shows a complexity of \\( O(k \\cdot n \\cdot d^2) \\), where \\( k \\) is the kernel size, suggesting an increase in computation if larger receptive fields are needed.\n",
-        "  - Has constant sequential operations (\\( O(1) \\)), similar to self-attention, facilitating parallelization.\n",
-        "  - Exhibits a logarithmic maximum path length (\\( O(\\log_k(n)) \\)), improving the learning of dependencies over recurrent layers but potentially less effective than self-attention for very long sequences.\n",
+        "  - Shows a complexity of $ O(k \\cdot n \\cdot d^2) $, where $ k $ is the kernel size, suggesting an increase in computation if larger receptive fields are needed.\n",
+        "  - Has constant sequential operations $ O(1) $, similar to self-attention, facilitating parallelization.\n",
+        "  - Exhibits a logarithmic maximum path length $ O(\\log_k(n)) $, improving the learning of dependencies over recurrent layers but potentially less effective than self-attention for very long sequences.\n",
         "\n",
         "- **Restricted Self-Attention Layer (or Local Attention)**:\n",
-        "  - Complexity per layer is reduced to \\( O(r \\cdot n \\cdot d) \\) by restricting attention to a window of \\( r \\) surrounding tokens, balancing computational efficiency and the ability to capture dependencies.\n",
-        "  - Maintains constant sequential operations (\\( O(1) \\)), benefiting parallelization.\n",
-        "  - Features a maximum path length of \\( O(n/r) \\), indicating a compromise in the ability to learn dependencies as the sequence length increases compared to full self-attention."
+        "  - Complexity per layer is reduced to $ O(r \\cdot n \\cdot d) $ by restricting attention to a window of $ r $ surrounding tokens, balancing computational efficiency and the ability to capture dependencies.\n",
+        "  - Maintains constant sequential operations $ O(1) $, benefiting parallelization.\n",
+        "  - Features a maximum path length of $ O(n/r) $, indicating a compromise in the ability to learn dependencies as the sequence length increases compared to full self-attention."
       ],
       "metadata": {
         "id": "bTfRpR-CEUWf"
