--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -265,7 +265,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "5Lo6pNiPIJ3-",
         "colab": {
@@ -413,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "49ToAoDBCFLR"
       },
@@ -430,7 +430,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Helper Functions"
+        "## Helper Functions"
       ],
       "metadata": {
         "id": "rd5J2JpDH5HB"
@@ -447,7 +447,7 @@
       "metadata": {
         "id": "YKKM9QA6H2ue"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "U38lQRe2CXRh"
       },
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 50,
       "metadata": {
         "id": "4RL7T6pwCfnb"
       },
@@ -583,25 +583,56 @@
         "class MultiHeadedAttention(nn.Module):\n",
         "    def __init__(self, h, d_model, dropout=0.1):\n",
         "        super(MultiHeadedAttention, self).__init__()\n",
+        "        # Ensure the model dimension is divisible by the number of heads.\n",
         "        assert d_model % h == 0\n",
+        "        # Dimension of each attention head.\n",
         "        self.d_k = d_model // h\n",
+        "        # Number of attention heads.\n",
         "        self.h = h\n",
+        "        # Linear layers for query, key, value, and output transformation.\n",
         "        self.linears = clones(nn.Linear(d_model, d_model), 4)\n",
+        "        # Scaled dot-product attention mechanism.\n",
         "        self.attn = ScaledDotProductAttention(dropout)\n",
+        "        # Dropout layer.\n",
         "        self.dropout = nn.Dropout(p=dropout)\n",
         "\n",
         "    def forward(self, query, key, value, mask=None):\n",
+        "        # Optionally expand mask for all heads if provided.\n",
         "        if mask is not None:\n",
         "            mask = mask.unsqueeze(1)\n",
+        "        # Batch size.\n",
         "        nbatches = query.size(0)\n",
+        "        # Apply linear projections in batch from d_model => h x d_k,\n",
+        "        # then transpose for attention computation.\n",
         "        query, key, value = [\n",
         "            l(x).view(nbatches, -1, self.h, self.d_k).transpose(1, 2)\n",
         "            for l, x in zip(self.linears, (query, key, value))\n",
         "        ]\n",
+        "        # Apply attention on all the projected vectors in batch.\n",
         "        x, attn_weights = self.attn(query, key, value, mask=mask)\n",
+        "        # \"Concat\" using a view and apply a final linear.\n",
         "        x = x.transpose(1, 2).contiguous().view(nbatches, -1, self.h * self.d_k)\n",
-        "        return self.linears[-1](x)"
+        "        return self.linears[-1](x)\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The `MultiHeadedAttention` module plays a crucial role in the Transformer architecture by enabling the model to focus on different parts of the input sequence simultaneously. Here's how it fits into the overall structure and its impact:\n",
+        "\n",
+        "- **Parallel Attention Heads**: This module divides the model's attention mechanism into multiple \"heads,\" allowing the model to jointly attend to information from different representation subspaces at different positions. This parallelization helps capture more complex dependencies in the data.\n",
+        "\n",
+        "- **Query, Key, Value Transformations**: Before computing attention, the module transforms the input queries, keys, and values through separate linear layers. This transformation is critical for allowing each attention head to learn different aspects of the data.\n",
+        "\n",
+        "- **Scaled Dot-Product Attention**: Each head uses scaled dot-product attention to compute how much focus to put on other parts of the input sequence. The scaling factor (the square root of the dimension of the key vectors) helps stabilize the gradients during training.\n",
+        "\n",
+        "- **Masking Support**: The module supports masking out certain positions within the input sequence (e.g., for ignoring padding tokens or for enforcing causality in autoregressive models), which is essential for flexible sequence processing.\n",
+        "\n",
+        "- **Output Transformation**: After computing the attention in all heads, the module combines the outputs and passes them through another linear transformation to produce the final result. This step is crucial for reintegrating the information learned by each head."
+      ],
+      "metadata": {
+        "id": "CoOLEfrbiR_X"
+      }
     },
     {
       "cell_type": "markdown",
@@ -622,8 +653,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The `PositionwiseFeedForward` class is a component of the Transformer architecture, designed to process the output of the attention mechanism.\n",
+        "\n",
+        "The PositionwiseFeedForward network plays a crucial role in adding depth and complexity to the Transformer model. While the attention mechanism allows the model to focus on different parts of the input sequence, the feedforward network enables complex transformations of the attention-modulated representations. This combination of attention and position-wise feedforward processing allows the Transformer to effectively capture the intricacies of sequential data.\n",
+        "\n",
+        "\n",
+        "Here's a breakdown of its structure and function:\n",
+        "\n",
+        "- **Initialization (`__init__`)**:\n",
+        "    - **d_model**: This parameter represents the dimensionality of the input and output of this feedforward network. It's consistent with the model's overall dimensionality, ensuring that the input and output of the feedforward network can seamlessly integrate with other parts of the Transformer.\n",
+        "\n",
+        "    - **d_ff**: This is the dimensionality of the hidden layer within the feedforward network. Typically, `d_ff` is significantly larger than `d_model`, allowing the network to capture more complex interactions in the data. This expansion and subsequent projection back to `d_model` is a common technique for increasing the expressiveness of neural networks.\n",
+        "\n",
+        "    - **dropout**: Specifies the dropout rate for regularization. Dropout is applied to the output of the first activation function.\n",
+        "\n",
+        "\n",
+        "- **Forward Pass (`forward`)**:\n",
+        "    - The input `x` is first passed through a linear transformation (`self.w_1`), increasing its dimensionality from `d_model` to `d_ff`. This is followed by a ReLU activation function to introduce non-linearity, enabling the network to model complex relationships.\n",
+        "\n",
+        "    - A dropout is applied after the ReLU function, randomly setting a fraction of its inputs to zero, which helps in regularization.\n",
+        "\n",
+        "    - Finally, the output from the dropout layer is passed through another linear transformation (`self.w_2`) to project it back to the original dimensionality (`d_model`). This ensures that the output of the feedforward network can be fed directly into subsequent layers or components of the Transformer."
+      ],
+      "metadata": {
+        "id": "rVDme49TuK1k"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "RowBB9YlCqiY"
       },
@@ -646,7 +706,7 @@
         "id": "d32j_xZuCt95"
       },
       "source": [
-        "### Embeddings and Softmax"
+        "### Embeddings"
       ]
     },
     {
@@ -660,8 +720,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "`Embeddings` are the entry point of textual (or any token-based) data into the Transformer model, transforming discrete token IDs into dense vectors that can carry semantic information. These vectors are then processed through the model's subsequent layers. The scaling factor $(\\sqrt{d_{model}})$ is applied to give the embeddings a similar scale to the model's internal activations, aiming to facilitate optimization.\n",
+        "\n",
+        "\n",
+        "Here's a breakdown of its components and functionality:\n",
+        "\n",
+        "- **Initialization (`__init__`)**:\n",
+        "    - **d_model**: This parameter represents the size of the embedding vectors. In the context of Transformers, `d_model` is a fixed-size dimension that all embeddings and subsequent layers adhere to, ensuring uniformity across the model's architecture. It's a critical hyperparameter that influences the model's capacity to encode information.\n",
+        "\n",
+        "    - **vocab**: This is the size of the vocabulary, representing the total number of unique tokens that the model can recognize. The `vocab` size determines the number of rows in the embedding matrix, where each row corresponds to a specific token in the vocabulary.\n",
+        "\n",
+        "- **Forward Pass (`forward`)**:\n",
+        "    - The `forward` method takes an input tensor `x` containing token IDs and returns their corresponding embeddings. The embeddings are scaled by the square root of `d_model`, a normalization step recommended in the original Transformer paper to reduce the variance of the embeddings, helping stabilize the learning process.\n"
+      ],
+      "metadata": {
+        "id": "79ldd0-KvgC0"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 54,
       "metadata": {
         "id": "_TcjR--JC0Ix"
       },
@@ -670,11 +750,11 @@
         "class Embeddings(nn.Module):\n",
         "    def __init__(self, d_model, vocab):\n",
         "        super(Embeddings, self).__init__()\n",
-        "        self.lut = nn.Embedding(vocab, d_model)\n",
+        "        self.embedding = nn.Embedding(vocab, d_model)\n",
         "        self.d_model = d_model\n",
         "\n",
         "    def forward(self, x):\n",
-        "        return self.lut(x) * math.sqrt(self.d_model)"
+        "        return self.embedding(x) * math.sqrt(self.d_model)"
       ]
     },
     {
@@ -723,7 +803,7 @@
       "metadata": {
         "id": "AGf73BmYkNl8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +844,7 @@
       "metadata": {
         "id": "WO24_zkvieI3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -814,7 +894,7 @@
       "metadata": {
         "id": "8vrQ0kQNjQqc"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -842,7 +922,7 @@
       "metadata": {
         "id": "1ggjoNxokfyH"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -861,6 +941,18 @@
       ],
       "metadata": {
         "id": "mP-z_BEeiAct"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<figure>\n",
+        "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Simple_Transformers/images/encoder.png\" width=\"200\" height=\"400\" alt=\"Encoder\">\n",
+        "    <figcaption>Encoder</figcaption>\n",
+        "</figure>"
+      ],
+      "metadata": {
+        "id": "fhAHHKEgnkOT"
       }
     },
     {
@@ -883,7 +975,7 @@
       "metadata": {
         "id": "hdxtR0eziN_V"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -907,7 +999,7 @@
       "metadata": {
         "id": "WxIStTI0hwJl"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -929,6 +1021,18 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<figure>\n",
+        "    <img src=\"https://raw.githubusercontent.com/arkeodev/nlp/main/Simple_Transformers/images/decoder.png\" width=\"200\" height=\"480\" alt=\"Decoder\">\n",
+        "    <figcaption>Decoder</figcaption>\n",
+        "</figure>"
+      ],
+      "metadata": {
+        "id": "7y1R8Sx6nlc1"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class Decoder(nn.Module):\n",
@@ -947,7 +1051,7 @@
       "metadata": {
         "id": "qb1N73B4jme_"
       },
-      "execution_count": 17,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -983,7 +1087,7 @@
       "metadata": {
         "id": "Yu03L_ARjwfU"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1018,7 +1122,7 @@
       "metadata": {
         "id": "Q3n9O22Jn7RU"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1053,7 +1157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 51,
       "metadata": {
         "id": "R0ijbTIEDOAl"
       },
@@ -1133,24 +1237,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6702Kmgk-au",
-        "outputId": "e13fdc7f-b82c-429f-ce95-a5c2e3af0f52"
+        "outputId": "252f0147-e367-47be-a3be-9f4afc3f7ac4"
       },
-      "execution_count": 49,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Example Untrained Model Prediction: tensor([[ 0,  1,  3,  5,  0,  1,  3,  5,  0, 10]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 4, 2, 2, 4, 2, 2, 2, 2, 4]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 7, 2, 8, 8, 8, 8, 8, 8, 8]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 9, 2, 0, 7, 2, 0, 7, 2, 6]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 7, 5, 4, 3, 3, 3, 3, 3, 3]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 5, 5, 2, 0, 5, 2, 4, 4, 4]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 4, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 5, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 5, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
             "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0,  6,  5, 10,  7,  4,  3,  3,  5, 10]])\n",
             "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 7, 6, 6, 7, 6, 6, 6, 6, 6]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 8, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0, 10,  1,  1,  1,  9,  8,  5,  8,  5]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 8, 3, 9, 9, 9, 9, 9, 9, 9]])\n"
+            "Example Untrained Model Prediction: tensor([[0, 4, 3, 5, 9, 5, 9, 5, 9, 5]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 7, 6, 8, 7, 0, 0, 0, 0, 8]])\n"
           ]
         }
       ]
@@ -1301,7 +1405,9 @@
       "source": [
         "- Huang, A., Subramanian, S., Sum, J., Almubarak, K., & Biderman, S. (2022). *The Annotated Transformer*. Original by Sasha Rush. Retrieved from [https://nlp.seas.harvard.edu/annotated-transformer/](https://nlp.seas.harvard.edu/annotated-transformer/)\n",
         "\n",
-        "- Vaswani, A., Shazeer, N., Parmar, N., Uszkoreit, J., Jones, L., Gomez, A. N., Kaiser, Ł., & Polosukhin, I. (2017). *Attention is All You Need*. In Advances in Neural Information Processing Systems (NIPS). Retrieved from [https://arxiv.org/abs/1706.03762](https://arxiv.org/abs/1706.03762)"
+        "- Vaswani, A., Shazeer, N., Parmar, N., Uszkoreit, J., Jones, L., Gomez, A. N., Kaiser, Ł., & Polosukhin, I. (2017). *Attention is All You Need*. In Advances in Neural Information Processing Systems (NIPS). Retrieved from [https://arxiv.org/abs/1706.03762](https://arxiv.org/abs/1706.03762)\n",
+        "\n",
+        "- The Illustrated Transformer: https://jalammar.github.io/illustrated-transformer/"
       ]
     }
   ],
