--- a/Simple_Transformers/simple_transformers.ipynb
+++ b/Simple_Transformers/simple_transformers.ipynb
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "4RL7T6pwCfnb"
       },
@@ -741,7 +741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "metadata": {
         "id": "_TcjR--JC0Ix"
       },
@@ -776,6 +776,33 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The `PositionalEncoding` class is a component designed to add information about the position of tokens within a sequence to the embeddings in a Transformer model. Since the Transformer architecture relies on attention mechanisms that do not inherently understand sequence order (unlike RNNs or LSTMs), positional encodings are crucial for enabling the model to consider the order of tokens when processing text or other sequential data. Without them, the model would treat sequences as unordered sets of tokens, significantly reducing its ability to perform tasks that rely on the sequential nature of the data, such as language understanding, translation, and generation.\n",
+        "\n",
+        "\n",
+        "Here's a detailed explanation:\n",
+        "\n",
+        "\n",
+        "- **Initialization (`__init__`)**:\n",
+        "    - **d_model**: The dimensionality of the model's embeddings, which is the size of the vectors representing each token. Positional encodings must match this dimensionality to be added to the token embeddings.\n",
+        "\n",
+        "    - **dropout**: The dropout rate for regularization. After adding positional encodings to the token embeddings, dropout is applied to the combined embeddings to prevent overfitting.\n",
+        "\n",
+        "    - **max_len**: The maximum length of the input sequences that the model can handle. This parameter defines the size of the positional encoding matrix, ensuring that every position in a sequence, up to `max_len`, has a unique positional encoding vector.\n",
+        "\n",
+        "    - **pe (Positional Encoding Matrix)**: A precomputed matrix where each row represents the positional encoding for a specific position in a sequence. The encodings alternate between sine and cosine functions across different dimensions, allowing the model to distinguish positions based on these patterns. The use of sine and cosine functions helps the model to learn to attend to relative positions since the encoding for a position is a function of its distance from other positions.\n",
+        "\n",
+        "- **Forward Pass (`forward`)**:\n",
+        "    - The method receives the token embeddings `x` and adds the positional encodings to them based on the length of the input sequence. The positional encoding vectors are not learned but are a fixed function of the position. Adding these encodings to the embeddings allows the model to consider the position of tokens when processing sequences.\n",
+        "    \n",
+        "    - The result is then passed through a dropout layer for regularization before being returned."
+      ],
+      "metadata": {
+        "id": "NsAZK_KFxlI4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class PositionalEncoding(nn.Module):\n",
@@ -785,25 +812,28 @@
         "        super(PositionalEncoding, self).__init__()\n",
         "        self.dropout = nn.Dropout(p=dropout)\n",
         "\n",
-        "        # Compute the positional encodings once in log space.\n",
+        "        # Precompute the positional encodings in log space.\n",
+        "        # pe is the positional encoding matrix where each row corresponds to a position\n",
+        "        # and each column corresponds to a dimension in the d_model space.\n",
         "        pe = torch.zeros(max_len, d_model)\n",
-        "        position = torch.arange(0, max_len).unsqueeze(1)\n",
+        "        position = torch.arange(0, max_len).unsqueeze(1)  # Generate a column vector of positions.\n",
         "        div_term = torch.exp(\n",
         "            torch.arange(0, d_model, 2) * -(math.log(10000.0) / d_model)\n",
-        "        )\n",
-        "        pe[:, 0::2] = torch.sin(position * div_term)\n",
-        "        pe[:, 1::2] = torch.cos(position * div_term)\n",
-        "        pe = pe.unsqueeze(0)\n",
-        "        self.register_buffer(\"pe\", pe)\n",
+        "        )  # Generate the divisors for the sine and cosine functions.\n",
+        "        pe[:, 0::2] = torch.sin(position * div_term)  # Apply sine to even indices in the dimensions.\n",
+        "        pe[:, 1::2] = torch.cos(position * div_term)  # Apply cosine to odd indices.\n",
+        "        pe = pe.unsqueeze(0)  # Add a batch dimension.\n",
+        "        self.register_buffer(\"pe\", pe)  # Register pe as a buffer that is not a model parameter.\n",
         "\n",
         "    def forward(self, x):\n",
-        "        x = x + self.pe[:, : x.size(1)].requires_grad_(False)\n",
-        "        return self.dropout(x)"
+        "        # Add positional encoding to each embedding vector in the batch.\n",
+        "        x = x + self.pe[:, : x.size(1)].requires_grad_(False)  # Ensures gradients are not computed for pe.\n",
+        "        return self.dropout(x)  # Apply dropout and return the result.\n"
       ],
       "metadata": {
         "id": "AGf73BmYkNl8"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1051,7 +1081,7 @@
       "metadata": {
         "id": "qb1N73B4jme_"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1157,7 +1187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 56,
       "metadata": {
         "id": "R0ijbTIEDOAl"
       },
@@ -1237,24 +1267,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B6702Kmgk-au",
-        "outputId": "252f0147-e367-47be-a3be-9f4afc3f7ac4"
+        "outputId": "749a069d-02f3-4804-e8b9-a69d5415b994"
       },
-      "execution_count": 52,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Example Untrained Model Prediction: tensor([[0, 7, 5, 4, 3, 3, 3, 3, 3, 3]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 5, 5, 2, 0, 5, 2, 4, 4, 4]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 4, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 5, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 5, 5, 5, 5, 5, 5, 5, 5, 5]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 3, 4, 3, 4, 3, 4, 3, 4, 3]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0,  6,  5,  2,  3,  4, 10, 10, 10, 10]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 6, 0, 6, 0, 6, 6, 9, 9, 9]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 1, 1, 1, 1, 1, 1, 1, 1, 1]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 3, 7, 8, 8, 8, 8, 3, 3, 3]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 6, 6, 6, 6, 6, 8, 6, 3, 5]])\n",
+            "Example Untrained Model Prediction: tensor([[ 0,  7,  1,  9, 10,  7,  1,  9, 10,  7]])\n",
+            "Example Untrained Model Prediction: tensor([[0, 7, 0, 7, 0, 7, 0, 7, 0, 7]])\n",
             "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
-            "Example Untrained Model Prediction: tensor([[ 0,  6,  5, 10,  7,  4,  3,  3,  5, 10]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 4, 3, 5, 9, 5, 9, 5, 9, 5]])\n",
-            "Example Untrained Model Prediction: tensor([[0, 7, 6, 8, 7, 0, 0, 0, 0, 8]])\n"
+            "Example Untrained Model Prediction: tensor([[ 0, 10,  6,  4, 10,  7,  4,  7,  4,  7]])\n"
           ]
         }
       ]
